refatorar: alterar método de exclusão de receita agendada para usar ID agendado